fix(table): add left padding to pagination on small screen

--- a/packages/react/src/components/Table/_pagination.scss
+++ b/packages/react/src/components/Table/_pagination.scss
@@ -17,6 +17,10 @@
   }
 }
 .#{$iot-prefix}--pagination--hide-page {
+  .#{$prefix}--pagination__left {
+    padding: 0 $spacing-05 0 $spacing-05;
+  }
+
   .#{$prefix}--pagination__left .#{$prefix}--pagination__text:first-child,
   .#{$prefix}--pagination__left span:first-child,
   .#{$prefix}--pagination__left .#{$prefix}--form-item {
